--- a/styles/style.css
+++ b/styles/style.css
@@ -63,9 +63,8 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote {
 .cover {
     margin: 30px 0;
     padding: 0;
-    background-image: url("../img/Ellipse\ 2.svg"), url(../img/Polygon\ 1.svg);
+    background-image: url("../images/cover.svg");
     background-repeat: no-repeat;
-    background-position: 0% 100%, 100% 0;
 }
 
 .cover-title {
@@ -108,9 +107,6 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote {
 
 .content-section__subtitle_right {
     text-align: right;
-}
-
-.content-section__introduction {
 }
 
 ul {
