--- a/styles/style.css
+++ b/styles/style.css
@@ -56,15 +56,30 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote {
     gap: 12px;
 }
 
+.ul-menu {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
 .header__menu-item {
     text-decoration: underline;
+    padding: 0;
+    margin: 0;
+}
+
+.menu-active {
+    text-decoration: none;
 }
 
 .cover {
-    margin: 30px 0;
-    padding: 0;
+    margin: 40px 0 30px 0;
+    padding-left: 20px;
     background-image: url("../images/cover.svg");
     background-repeat: no-repeat;
+    background-position: 20px;
 }
 
 .cover-title {
