--- a/styles/style.css
+++ b/styles/style.css
@@ -25,11 +25,13 @@ blockquote {
 .theme_dark {
   background-color: var(--black-bg, #131313);
   color: var(--text-light, #f5f5f5);
+  color: red;
 }
 
 .theme_bright {
   background: var(--yellow-bg, #fee42a);
   color: var(--black-bg, #131313);
+  color: red;
 }
 
 .main-content {
@@ -83,7 +85,7 @@ blockquote {
 }
 
 .cover {
-  margin: 40px 0 30px 0;
+  margin: 40px 0 35px 0;
   padding-left: 20px;
   background-image: url("../images/cover.svg");
   background-repeat: no-repeat;
@@ -108,7 +110,8 @@ blockquote {
 
 .intro__heading {
   display: flex;
-  color: var(--text-gray, #ccc);
+  color: red; 
+  /* color: var(--text-gray, #ccc); */
 }
 
 .intro__main-text {
@@ -133,12 +136,15 @@ blockquote {
 
   /* У списков какие-то свои приколы с отступами, поэтому я сбросил всё и настраивал вручкую, чтобы совпадало с макетами */
 ul {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  gap: 16px;
 }
 
 li {
-  margin: 16px 20px 0px 0px;
-  padding-left: 10px;
+  margin-left: 12px; 
+  padding-left: 8px;
 }
 
 .how-to {
