Поправил подключение шрифтов и часть комментов

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,71 +1,34 @@
-.inter-regular-footer {
-  font-family: Inter;
-  font-size: 14px;
+@font-face {
+  src: url(./interregular.ttf) format("ttf"),
+    url(./interregular.woff) format("woff"),
+    url(./interregular.woff2) format("woff2");
+
+  font-family: "inter-regular";
   font-style: normal;
-  font-weight: 400;
-  line-height: 125%; /* 17.5px */
 }
 
-.inter-regular {
-  font-family: Inter;
-  font-size: 16px;
+@font-face {
+  src: url(./interbold.ttf) format("ttf"), url(./interbold.woff) format("woff"),
+    url(./interbold.woff2) format("woff2");
+
+  font-family: "inter-bold";
+  font-style: bold;
+}
+
+@font-face {
+  src: url(./ebgaramondregular.ttf) format("ttf"),
+    url(./ebgaramondregular.woff) format("woff"),
+    url(./ebgaramondregular.woff2) format("woff2");
+
+  font-family: "EB__Garamond-regular";
   font-style: normal;
-  font-weight: 400;
-  line-height: 19.2px; /* 120% */
 }
 
-.inter-regular-weird {
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21.6px; /* 135% */
-}
+@font-face {
+  src: url(./ebgaramondmedium.ttf) format("ttf"),
+    url(./ebgaramondmedium.woff) format("woff"),
+    url(./ebgaramondmedium.woff2) format("woff2");
 
-.inter-regular-bigger {
-  font-family: Inter;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 27px; /* 135% */
-}
-
-.inter-bold {
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 135%; /* 21.6px */
-}
-
-.eb-garamond-regular {
-  font-family: EB Garamond;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 135%; /* 29.7px */
-}
-
-.eb-garamond-medium {
-  font-family: "EB Garamond";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 115%; /* 32.2px */
-}
-
-.eb-garamond-huge {
-  font-family: "EB Garamond";
-  font-size: 72px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 100%; /* 72px */
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.text-align-right {
-  text-align: right;
+  font-family: "EB__Garamond-bold";
+  font-style: medium;
 }
