--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ blockquote {
 
 .cover-text-line {
   display: block;
-  font-family: "EB Garamond";
+  font-family: "EB__Garamond-regular";
   font-size: 72px;
   font-style: normal;
   font-weight: 400;
